# RustEVMPlayground

./: .gitignore  Cargo.toml  INSTALLATION.md  IOS-BUILD_NOTES.md  README.md  TROUBLESHOOTING.md  example.sol  foo.txt  pubspec.yaml  rust-toolchain.toml
.github/: settings.yml
.github/workflows/: remove_labels.yml  rust.yml  scheduled-audit.yml  telegram_bot.yml
android/: gradle.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_template/: MainActivity.kt
android/app/src/main/kotlin/com/litheum/litheum_wallet/: MainActivity.kt
contracts/: example.sol
ios/: Podfile
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
scripts/: compilecontracts.sh
src/: main.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
