[package]
name = "lithevm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = "0.41.1" 
# evm = "1.0.0-dev"
ethereum-types = "0.14.1"
hex = "0.4.3"
sha3 = "0.10.8"
rand = "0.8.5"
bigint = "4.4.3"
rlp = "0.5.2"
#etcommon-bigint = "0.2.0"
#env_logger = "0.9.1"
#ethereum-hexutil = "0.2.3"
#json = "0.12.4"
#sha3 = "0.10.8"
#etcommon-rlp = { version = "0.2", default-features = false }
#serde_json = "1.0"
#sputnikvm = "0.10.1"
#evm = "0.41.1"
